tests/invalid/units_invalid_derivative.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UnitsInvalidDerivative",
    "description": "Invalid file demonstrating derivative equation LHS (dx/dt = m/s) incompatible with RHS (kg)",
    "authors": ["Chris Tessum with Claude"],
    "created": "2026-04-16T00:00:00Z"
  },

  "models": {
    "BadUnitsModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0, "description": "Position" },
        "t": { "type": "parameter", "units": "s", "default": 1.0, "description": "Time (independent variable placeholder)" },
        "mass": { "type": "parameter", "units": "kg", "default": 5.0, "description": "Mass value (wrongly assigned to dx/dt)" }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": "mass"
        }
      ]
    }
  }
}
